<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">LibrePods</string>
    <string name="app_description">Liberate your AirPods from Apple\'s ecosystem.</string>
    <string name="app_widget_description">See your AirPods battery status right from your home screen!</string>
    <string name="accessibility">Accessibility</string>
    <string name="tone_volume">Tone Volume</string>
    <string name="tone_volume_description">Adjust the tone volume of sound effects played by AirPods.</string>
    <string name="audio">Audio</string>
    <string name="adaptive_audio">Adaptive Audio</string>
    <string name="customize_adaptive_audio">Customize Adaptive Audio</string>
    <string name="adaptive_audio_description">Adaptive audio dynamically responds to your environment and cancels or allows external noise. You can customize Adaptive Audio to allow more or less noise.</string>
    <string name="buds">Buds</string>
    <string name="case_alt">Case</string>
    <string name="test">Test</string>
    <string name="name">Name</string>
    <string name="noise_control">Listening Mode</string>
    <string name="off">Off</string>
    <string name="transparency">Transparency</string>
    <string name="adaptive">Adaptive</string>
    <string name="noise_cancellation">Noise Cancellation</string>
    <string name="press_and_hold_airpods">Press and Hold AirPods</string>
    <string name="press_and_hold_noise_control_description">Press and hold the stem to cycle between the selected listening modes.</string>
    <string name="head_gestures">Head Gestures</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="conversational_awareness">Conversational Awareness</string>
    <string name="conversational_awareness_description">Lowers media volume and reduces background noise when you start speaking to other people.</string>
    <string name="personalized_volume">Personalized Volume</string>
    <string name="personalized_volume_description">Adjusts the volume of media in response to your environment.</string>
    <string name="noise_cancellation_single_airpod">Noise Cancellation with Single AirPod</string>
    <string name="noise_cancellation_single_airpod_description">Allow AirPods to be put in noise cancellation mode when only one AirPod is in your ear.</string>
    <string name="volume_control">Volume Control</string>
    <string name="volume_control_description">Adjust the volume by swiping up or down on the sensor located on the AirPods Pro stem.</string>
    <string name="airpods_not_connected">AirPods not connected</string>
    <string name="airpods_not_connected_description">Please connect your AirPods to access settings.</string>
    <string name="back">Back</string>
    <string name="customizations">Customizations</string>
    <string name="relative_conversational_awareness_volume">Relative volume</string>
    <string name="relative_conversational_awareness_volume_description">Reduces to a percentage of the current volume instead of the maximum volume.</string>
    <string name="conversational_awareness_pause_music">Pause Music</string>
    <string name="conversational_awareness_pause_music_description">When you start speaking, music will be paused.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="noise_control_widget_description">Control Noise Control Mode directly from your Home Screen.</string>
    <string name="island_connected_text">Connected</string>
    <string name="island_connected_remote_text">Connected to Linux</string>
    <string name="island_taking_over_text">Connected</string>
    <string name="island_moved_to_remote_text">Moved to Linux</string>
    <string name="island_moved_to_other_device_text">Moved to %1$s</string>
    <string name="island_moved_to_other_device_reversed_text">Reconnect from notification</string>
    <string name="head_tracking">Head Tracking</string>
    <string name="head_gestures_details">Nod to answer calls, and shake your head to decline.</string>
    <string name="general_settings_header">General</string>
    <string name="qs_click_behavior_title">Quick Settings Tile Action</string>
    <string name="qs_click_behavior_dialog_desc">Show noise control dialog on tap.</string>
    <string name="qs_click_behavior_cycle_desc">Cycle through modes on tap.</string>
    <string name="developer_options_header">Developer</string>
    <string name="more_settings_title">Open AirPods Settings</string>
    <string name="more_settings_subtitle">Manage AirPods features and preferences</string>
    <string name="ear_detection">Automatic Ear Detection</string>
    <string name="auto_play">Auto Play</string>
    <string name="auto_pause">Auto Pause</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="troubleshooting_description">Collect logs to diagnose issues with AirPods connection</string>
    <string name="collect_logs">Collect Logs</string>
    <string name="saved_logs">Saved Logs</string>
    <string name="no_logs_found">No saved logs found</string>
    <string name="takeover_header">Auto-Connect preferences</string>
    <string name="takeover_airpods_state">Connect to your AirPods when its status is:</string>
    <string name="takeover_disconnected">Disconnected</string>
    <string name="takeover_disconnected_desc">AirPods are not connected to a device</string>
    <string name="takeover_idle">Idle</string>
    <string name="takeover_idle_desc">A device is connected to your AirPods, but not playing media or on a call</string>
    <string name="takeover_music">Playing media</string>
    <string name="takeover_music_desc">A device is playing media on your AirPods</string>
    <string name="takeover_call">On call</string>
    <string name="takeover_call_desc">A device is on a call with your AirPods</string>
    <string name="takeover_phone_state">Connect to AirPods when your phone is:</string>
    <string name="takeover_ringing_call">Receiving a call</string>
    <string name="takeover_ringing_call_desc">Your phone starts ringing</string>
    <string name="takeover_media_start">Starting media playback</string>
    <string name="takeover_media_start_desc">Your phone starts playing media</string>
    <string name="undo">Undo</string>
    <string name="customize_transparency_mode_description">You can customize Transparency mode for your AirPods Pro to help you hear what\'s around you.</string>
    <string name="loud_sound_reduction_description">Loud Sound Reduction can actively reduce your exposure to loud environmental noises when in Transparency and Adaptive mode. Loud Sound Reduction is not active in Off mode.</string>
    <string name="loud_sound_reduction">Loud Sound Reduction</string>
    <string name="call_controls">Call Controls</string>
    <string name="automatically_connect">Connect to this device automatically</string>
    <string name="automatically_connect_description">When enabled, AirPods will try to connect to this device automatically. Else, they will try to autoconnect only when last connected.</string>
    <string name="sleep_detection">Pause media when falling asleep</string>
    <string name="off_listening_mode">Off Listening Mode</string>
    <string name="off_listening_mode_description">When this is on, AirPods listening modes will include an Off option. Loud sound levels are not reduced when the listening mode is set to Off.</string>
    <string name="microphone">Microphone</string>
    <string name="microphone_mode">Microphone Mode</string>
    <string name="microphone_automatic">Automatic</string>
    <string name="microphone_always_right">Always Right</string>
    <string name="microphone_always_left">Always Left</string>
    <string name="answer_call">Answer call</string>
    <string name="mute_unmute">Mute/Unmute</string>
    <string name="hang_up">Hang Up</string>
    <string name="press_once">Press Once</string>
    <string name="press_twice">Press Twice</string>
    <string name="hearing_aid">Hearing Aid</string>
    <string name="adjustments">Adjustments</string>
    <string name="swipe_to_control_amplification">Swipe to control amplification</string>
    <string name="swipe_amplification_description">When in Transparency and no media is playing, swipe up and down on the Touch controls of your AirPods Pro to increase or decrease the amplification of environmental sounds.</string>
    <string name="transparency_mode">Transparency Mode</string>
    <string name="customize_transparency_mode">Customize Transparency Mode</string>
    <string name="press_speed">Press Speed</string>
    <string name="press_speed_description">Adjust the speed required to press two or three times on your AirPods.</string>
    <string name="press_and_hold_duration">Press and Hold Duration</string>
    <string name="press_and_hold_duration_description">Adjust the duration required to press and hold on your AirPods.</string>
    <string name="volume_swipe_speed">Volume Swipe Speed</string>
    <string name="volume_swipe_speed_description">To prevent unintended volume adjustments, select preferred wait time between swipes.</string>
    <string name="equalizer">Equalizer</string>
    <string name="apply_eq_to">Apply EQ to</string>
    <string name="phone">Phone</string>
    <string name="media">Media</string>
    <string name="band_label">Band %d</string>
    <string name="default_option">Default</string>
    <string name="slower">Slower</string>
    <string name="slowest">Slowest</string>
    <string name="longer">Longer</string>
    <string name="longest">Longest</string>
    <string name="darker">Darker</string>
    <string name="brighter">Brighter</string>
    <string name="less">Less</string>
    <string name="more">More</string>
    <string name="amplification">Amplification</string>
    <string name="balance">Balance</string>
    <string name="tone">Tone</string>
    <string name="ambient_noise_reduction">Ambient Noise Reduction</string>
    <string name="conversation_boost">Conversation Boost</string>
    <string name="conversation_boost_description">Conversation Boost focuses your AirPods Pro on the person talking in front of you, making it easier to hear in a face-to-face conversation.</string>
    <string name="hearing_aid_description">AirPods can use the results of a hearing test to make adjustments that improve the clarity of voices and sounds around you.\n\nHearing Aid is only intended for people with perceived mild to moderate hearing loss.</string>
    <string name="media_assist">Media Assist</string>
    <string name="media_assist_description">AirPods Pro can use the results of a hearing test to make adjustments that improve the clarity of music, video, and calls.</string>
    <string name="adjust_media">Adjust Music and Video</string>
    <string name="adjust_calls">Adjust Calls</string>
    <string name="widget">Widget</string>
    <string name="show_phone_battery_in_widget">Show phone battery in widget</string>
    <string name="show_phone_battery_in_widget_description">Display your phone\'s battery level in the widget alongside AirPods battery</string>
    <string name="popup_animations">Popup Animations</string>
    <string name="show_bottom_sheet_popup">Bottom sheet popup</string>
    <string name="reconnect_widget_description">Tap to reconnect your saved AirPods</string>
    <string name="qs_airpods_transparency">Transparency</string>
    <string name="qs_airpods_cancellation">Noise cancellation</string>
    <string name="qs_airpods_adaptive">Adaptive</string>
    <string name="qs_airpods_off">Off</string>
    <string name="row_hear">Hear</string>
    <string name="row_anc">ANC</string>
    <string name="row_auto">Auto</string>
    <string name="row_connect">Connect</string>
</resources>